# giza

./: .gitignore  .mailmap  AUTHORS  CHANGES  ChangeLog  INSTALL  LATEST.md  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h.in  configure  configure.ac
.github/workflows/: api.yml  build.yml  release.yml
branches/opengl/: INSTALL  Makefile
branches/opengl/docs/: api.pl  pgplot_status.pl
branches/opengl/interface/: giza-fortran.F90  pgplot-stubs.f90
branches/opengl/src/: giza-annotate.c  giza-band-style.c  giza-band.c  giza-box.c  giza-character-size-private.h  giza-colour-index-private.h  giza-colour-index.c  giza-driver-eps-private.h  giza-driver-pdf-private.h  giza-driver-pdf.c  giza-driver-png-private.h  giza-driver-ps-private.h  giza-driver-xw-private.h  giza-driver-xw.c  giza-error-bars.c  giza-features.h  giza-function-t.c  giza-function-y.c  giza-gl-interactive.c  giza-gl-private.h  giza-gl.h  giza-io-private.h  giza-line.c  giza-polygon.c  giza-qtext.c  giza-render.c  giza-save.c  giza-scanner.l  giza-set-font-private.h  giza-shared-cpp.h  giza-stroke-private.h  giza-stroke.c  giza-text-background.c  giza-text-private.h  giza-vector.c  giza.c  giza.h
branches/opengl/test/: test-box.c  test-colour-index.c  test-contour.c  test-environment.c  test-gl.c  test-line-cap.c  test-vector.c  test-window.c
branches/src/: giza-arrow-style-private.h  giza-arrow-style.c  giza-arrow.c  giza-band-private.h  giza-buffering.c  giza-contour.c  giza-draw.c  giza-driver-eps.c  giza-driver-ps.c  giza-driver-xw-private.h  giza-driver-xw.c  giza-drivers.c  giza-environment.c  giza-fill-private.h  giza-fill.c  giza-function-x.c  giza-get-key-press.c  giza-label.c  giza-line-width.c  giza-rectangle.c  giza-text-background-private.h  giza-text.c  giza-transforms-private.h  giza-viewport.c  giza-warnings-private.h  giza-window-private.h  giza-window.c
branches/test/: test-arrow.c  test-format-number.c  test-qtext.c  test-rectangle.c
doc/: api.pl  cpgplot_status.pl  generate-docs.sh  get-fortran-params.pl  pgplot_status.pl
docs/: api.pl  cpgplot_status.pl  get-fortran-params.pl  get-source-files.pl  index.html  style.css
docs/contact/: index.html
docs/documentation/: api.html  api.shtml  cairo-device.c  cairo-device.html  cpgplot-status.html  gettingstarted.c  gettingstarted.html  index.html  installation.html  pgplot-header.html  pgplot-status.html  pgplot.html  pgplot.shtml
docs/download/: index.html
docs/news/: index.html
docs/samples/: index.html
include/: cpgplot.h  giza-shared.h  giza.h
interface/: Makefile  cpgplot.h  giza-cpgplot.c  giza-fortran.F90  giza-pgplot.f90
scripts/: api.pl  autogen.sh  cpgplot_status.pl  generate-docs.sh  get-source-files.pl  mongo_status.pl  pgplot_status.pl  run-perl-pgplot-tests.sh
scripts/patches/: perl-pgplot-giza-cpgconx.patch
src/: Makefile.am  Makefile.in  cpgplot.h  cpgplot.pc.in  giza-annotate.c  giza-arrow-style-private.h  giza-arrow-style.c  giza-arrow.c  giza-axis.c  giza-band-private.h  giza-band-style.c  giza-band.c  giza-box-time.c  giza-box.c  giza-buffering.c  giza-character-size-private.h  giza-character-size.c  giza-circle.c  giza-clipping.c  giza-colour-bar.c  giza-colour-index-private.h  giza-colour-index.c  giza-colour-palette.c  giza-colour-private.h  giza-colour-table-private.h  giza-colour-table.c  giza-contour.c  giza-cpgplot.c  giza-cursor-private.h  giza-cursor-routines.c  giza-device-has-cursor.c  giza-draw-background.c  giza-draw.c  giza-driver-cairo-private.h  giza-driver-cairo.c  giza-driver-eps-private.h  giza-driver-eps.c  giza-driver-mp4-private.h  giza-driver-mp4.c  giza-driver-null-private.h  (+92 more)
test/: Makefile  Makefile.am  Makefile.in  test-2D.f90  test-XOpenDisplay.c  test-arrow.c  test-band.c  test-box.c  test-cairo-xw.c  test-change-page.c  test-circle.c  test-environment.c  test-error-bars.c  test-format-number.c  test-fortran.f90  test-line-cap.c  test-line-style.c  test-openclose.c  test-pdf.c  test-png.c  test-points.c  test-qtext.c  test-rectangle.c  test-render.c  test-set-line-width.c  test-window.c  test-xw.c
test/C/: Makefile.am  Makefile.in  test-XOpenDisplay.c  test-arrow.c  test-band.c  test-box.c  test-cairo-device.c  test-cairo-xw.c  test-change-page.c  test-circle.c  test-colour-index.c  test-contour.c  test-cpgconb.c  test-cpgconf.c  test-cpgconl.c  test-cpgconx.c  test-cpghi2d.c  test-cpgpnts.c  test-cpgscrl.c  test-environment.c  test-error-bars-2.c  test-error-bars.c  test-format-number.c  test-giza-round.c  test-giza-xw.c  test-glyph-fallback.c  test-line-cap.c  test-line-style.c  test-openclose.c  test-pdf.c  test-pggray.c  test-png.c  test-points.c  test-qtext.c  test-rectangle.c  test-render.c  test-set-line-width.c  test-svg.c  test-unicode.c  test-vector.c  (+1 more)
test/F90/: Makefile.am  Makefile.in  test-2D.f90  test-fortran.f90  test-mongo-basic.f90  test-mongo-batch.f90  test-mongo-kepler.f90  test-mongo-label.f90  test-pgaxis.f90  test-pgconb.f90  test-pgconf.f90  test-pgconl.f90  test-pgconx.f90  test-pghi2d.f90  test-pgncur.f90  test-pgpnts.f90  test-pgscrl.f90  test-unicode.f90
